add plicies in db
